# pylink-example

./: .gitignore  README.md  pyproject.toml
pylink_example/: main.py
pylink_example/mri_demo/: EyeLinkMRIdemo_Builder.psyexp  EyeLinkMRIdemo_Builder.py  trialData.csv
pylink_example/stroop_task/: task.py
